to create super user

--- a/leclerc_suppliers_platform/Dockerfile
+++ b/leclerc_suppliers_platform/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /app
 COPY . .
 RUN pip3 install -r requirements.txt
 # RUN python manage.py migrate
-CMD python manage.py migrate ; python manage.py runserver 0.0.0.0:8008
+CMD python manage.py makemigrations ; python manage.py migrate ; python manage.py runserver 0.0.0.0:8008; 
 
 # ADD THIS CODE TO CREATE NEW SUPERUSER IN DJANGO ADMIN
-# echo "from django.contrib.auth.models import User; User.objects.create_superuser('USER', 'EMAIL', 'PASSWORD')" | python manage.py shell 
+# echo "from django.contrib.auth.models import User; User.objects.create_superuser('diogo', 'seomanager@cooplecnorte.pt', 'Toe18Perir')" | python manage.py shell 
+# 
